feat: Implements SumUp payment processing for both app and web payment channels. Also allows payment methods to be individually enabled/disabled
- Added payment processing via SumUp, supporting app deep-link payments and hosted checkouts.
- Database updated to support payment intents and additional data in payments table. Schema 2.2
- Introduced sanitiseText middleware to prevent XSS and other attacks on text inputs.
- Updated logger to include more informative startup messages.
- Refactored maintenance.js to include payment intents deletion during auction reset.
- Enhanced phase1-patch.js to fetch enabled payment methods.
- Implement capture of payment notes including basic sanitisation of text inputs.
- Updated front end settlement.html and settlement.js to reflect new payment methods and improve user experience.
- Added error handling and logging for payment operations.
- Updated .ENV example

--- a/backend/auction.env.example
+++ b/backend/auction.env.example
@@ -1,2 +1,30 @@
+# Example environment configuration for Convention Auction backend.
+# Copy this file to 'auction.env' and fill in the appropriate values.
+
 # SECRET_KEY - Used to secure login sessions. Put a long (> 16 chars) random string.
 SECRET_KEY=
+
+# SumUp: API for online payments
+SUMUP_API_KEY=sup_sk_xxxxxxx    # SumUp API Key for Online Payments (Bearer)
+SUMUP_MERCHANT_CODE=Mxxxxxxx                          # Your merchant_code from SumUp dashboard
+SUMUP_RETURN_URL=https://yoursite.com/payments/sumup/webhook # Return URL for hosted payments
+
+
+# SumUp: for deep link (card-present)
+SUMUP_AFFILIATE_KEY=sup_afk_xxxxxxxxxx   # SumUp Affiliate Key for deep link payments
+SUMUP_APP_ID=YourAppID                     # Your SumUp App ID for deep link payments
+SUMUP_CALLBACK_SUCCESS=https://yoursite.com/payments/sumup/callback/success # Success callback URL
+SUMUP_CALLBACK_FAIL=https://yoursite.com/payments/sumup/callback/fail # Failure callback URL
+
+# SumUp: payment intent TTL in minutes
+PAYMENT_INTENT_TTL_MINUTES=20
+
+# Enable or disable payment methods
+# Note that the SumUp methods require proper configuration above - This will be checked at runtime.
+
+SUMUP_WEB_ENABLED=true                  # Enable SumUp online payments
+SUMUP_CARD_PRESENT_ENABLED=true         # Enable SumUp deep link (card-present) payments
+CASH_PAYMENT_ENABLED=true               # Enable cash payments
+MANUAL_CARD_PAYMENT_ENABLED=true        # Enable manual payments
+PAYPAL_PAYMENT_ENABLED=true            # Enable PayPal payments
+SUMUP_APP_INDIRECT_ENABLED=false        # Enable SumUp via android app payments. Not implemented yet.
