--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
     "name": "charity-auction-backend",
-    "version": "1.1.0-dev-001",
+    "version": "1.1.0-dev-002/sumup01",
     "description": "Backend for Charity Auction Submission Management",
     "main": "backend.js",
     "scripts": {
